# cchh

./: .gitignore  CLAUDE.md  DEVELOPER.md  README.md  all_hooks.py  doc_problems.md  event_logger.sh  hook_handler.py  mcp_server.sh  plan.md  prompt.txt  pyproject.toml  refactor-plan.md  remote-approval-issue-feasibility.md  remote-approval-issue.md  ruff_hook.py  test_cwd_display.py  test_hook_handler.py  test_problems.md  test_user_prompt_submit.py
.claude/: settings.json
.github/workflows/: claude-code-review.yml  claude.yml  test.yaml
aqua/: aqua-checksums.json  aqua.yaml
docs/: approval-examples.md  mcp-env-config.md  mcp-setup.md
hook_handler/: __init__.py  command_converter.py  config.py  handlers.py  logger.py  main.py  messages.py  notifiers.py  py.typed  session.py  utils.py
hook_handler/tests/: __init__.py  conftest.py  test_command_converter.py  test_handlers.py  test_logger.py  test_notifiers.py  test_session.py  test_utils.py
mcp-server/: README.md  claude_settings_example.json  claude_settings_sdk.json  mcp_server_sdk.py  minimal_mcp_server.py  run_mcp_server.sh  run_server.sh  setup.sh  test_mcp_sdk.py  test_permission.py
plans/: 20250723-remote-approval.md
src/core/: base.py  dispatcher.py  types.py
src/logger/: config.py  event_logger.py
src/mcp/: __init__.py  approval_server.py  server.py  slack_integration.py
src/slack/: command_formatter.py  config.py  event_formatter.py  notifier.py  session_tracker.py
src/utils/: command_parser.py  config.py  io_helpers.py  logger.py  text_utils.py
src/zunda/: command_formatter.py  config.py  prompt_formatter.py  speaker.py
tests/: conftest.py
tests/core/: test_dispatcher.py
tests/integration/: test_all_hooks.py
tests/logger/: test_event_logger.py
tests/slack/: test_command_formatter.py  test_event_formatter.py  test_notifier.py
tests/utils/: __init__.py  test_io_helpers.py
tests/zunda/: test_command_formatter.py  test_speaker.py
